--- a/ImageGPT/imagegpt_huggingface_inference.ipynb
+++ b/ImageGPT/imagegpt_huggingface_inference.ipynb
@@ -73,8 +73,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c1205263",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_3224/1725894312.py:4: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.detach().clone() or sourceTensor.detach().clone().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  context = torch.tensor(context).to(device)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "context shape: torch.Size([8, 1])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "This is a friendly reminder - the current text generation call will exceed the model's predefined maximum length (1024). Depending on the model, you may observe exceptions, performance degradation, or nothing at all.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "output shape: torch.Size([8, 1025])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# unconditional generation of 8 images\n",
+    "batch_size = 8\n",
+    "context = torch.full((batch_size, 1), model.config.vocab_size - 1) #initialize with SOS token\n",
+    "context = torch.tensor(context).to(device)\n",
+    "print(\"context shape:\", context.shape)\n",
+    "\n",
+    "output = model.generate(\n",
+    "    inputs=context,\n",
+    "    max_length=model.config.n_positions + 1,\n",
+    "    temperature=1.0, do_sample=True, top_k=40\n",
+    ")\n",
+    "print(\"output shape:\", output.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38ecc2d4",
    "metadata": {},
    "outputs": [],
    "source": []
