--- a/LeViT/levit_timm_inference.ipynb
+++ b/LeViT/levit_timm_inference.ipynb
@@ -15,15 +15,50 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "5ac974ce",
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "fc1abe87",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PIL import Image\n",
+    "import timm\n",
+    "import torch\n",
+    "\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model = timm.create_model(\n",
+    "    'levit_128.fb_dist_in1k', pretrained=True\n",
+    ")\n",
+    "model.eval().to(device);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0f1098b",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "py311",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
