--- a/LeViT/levit_timm_inference.ipynb
+++ b/LeViT/levit_timm_inference.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "fc1abe87",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,13 @@
     "model = timm.create_model(\n",
     "    'levit_128.fb_dist_in1k', pretrained=True\n",
     ")\n",
-    "model.eval().to(device);"
+    "model.eval().to(device);\n",
+    "\n",
+    "# get model specific transforms (normalization, resize)\n",
+    "data_config = timm.data.resolve_model_data_config(model)\n",
+    "transforms = timm.data.create_transform(\n",
+    "    **data_config, is_training=False\n",
+    ")"
    ]
   },
   {
