--- a/LeViT/levit_timm_inference.ipynb
+++ b/LeViT/levit_timm_inference.ipynb
@@ -41,8 +41,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a0f1098b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Class: 738, Probability: 62.17%\n",
+      "Class: 883, Probability: 27.89%\n",
+      "Class: 725, Probability: 0.65%\n",
+      "Class: 503, Probability: 0.47%\n",
+      "Class: 773, Probability: 0.46%\n"
+     ]
+    }
+   ],
+   "source": [
+    "image_path = \"../samples/plants.jpg\"\n",
+    "img = Image.open(image_path).convert(\"RGB\")\n",
+    "\n",
+    "output = model(transforms(img).unsqueeze(0).to(device))\n",
+    "\n",
+    "top5_probabilities, top5_class_indices = torch.topk(output.softmax(dim=1) * 100, k=5)\n",
+    "\n",
+    "for i in range(5):\n",
+    "    print(f\"Class: {top5_class_indices[0][i].item()}, Probability: {top5_probabilities[0][i].item():.2f}%\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c59afb02",
    "metadata": {},
    "outputs": [],
    "source": []
