--- a/PoolFormer/poolformer_huggingface_inference.ipynb
+++ b/PoolFormer/poolformer_huggingface_inference.ipynb
@@ -49,6 +49,43 @@
     "    \"sail/poolformer_s12\"\n",
     ").eval().to(device)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "924e2cbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted class: pot, flowerpot\n"
+     ]
+    }
+   ],
+   "source": [
+    "image_path = \"../samples/plants.jpg\"\n",
+    "image = Image.open(image_path)\n",
+    "\n",
+    "inputs = feature_extractor(images=image, return_tensors=\"pt\")\n",
+    "inputs = inputs.to(device)\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    outputs = model(**inputs)\n",
+    "logits = outputs.logits\n",
+    "# model predicts one of the 1000 ImageNet classes\n",
+    "predicted_class_idx = logits.argmax(-1).item()\n",
+    "print(\"Predicted class:\", model.config.id2label[predicted_class_idx])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23437958",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
