--- a/UperNet/upernet_huggingface_inference.ipynb
+++ b/UperNet/upernet_huggingface_inference.ipynb
@@ -16,15 +16,64 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "a8712573",
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "329b4865",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pyml/anaconda3/envs/py311/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Using a slow image processor as `use_fast` is unset and a slow processor was saved with this model. `use_fast=True` will be the default behavior in v4.52, even if the model was saved with a slow processor. This will result in minor differences in outputs. You'll still be able to use a slow processor with `use_fast=False`.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from PIL import Image\n",
+    "import torch\n",
+    "from transformers import (\n",
+    "    AutoImageProcessor,\n",
+    "    UperNetForSemanticSegmentation\n",
+    ")\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "image_processor = AutoImageProcessor.from_pretrained(\n",
+    "    \"openmmlab/upernet-convnext-tiny\"\n",
+    ")\n",
+    "model = UperNetForSemanticSegmentation.from_pretrained(\n",
+    "    \"openmmlab/upernet-convnext-tiny\"\n",
+    ").to(device)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "408d31d5",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "py311",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
