--- a/UperNet/upernet_huggingface_inference.ipynb
+++ b/UperNet/upernet_huggingface_inference.ipynb
@@ -50,8 +50,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "408d31d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 150, 512, 512]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image_path = \"../samples/plants.jpg\"\n",
+    "image = Image.open(image_path).convert(\"RGB\")\n",
+    "\n",
+    "inputs = image_processor(images=image, return_tensors=\"pt\")\n",
+    "inputs = inputs.to(device)\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    outputs = model(**inputs)\n",
+    "\n",
+    "logits = outputs.logits\n",
+    "list(logits.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "198927ac",
    "metadata": {},
    "outputs": [],
    "source": []
