UNO: wrapper-function for inference

--- a/UNO/uno_huggingface_inference.ipynb
+++ b/UNO/uno_huggingface_inference.ipynb
@@ -138,8 +138,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "56db83f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def inference(pipeline, image_paths, prompt):\n",
+    "    data_root = \"./\"\n",
+    "    data_dicts = [{\"prompt\": prompt, \"image_paths\": image_paths}]\n",
+    "\n",
+    "    for (i, data_dict), j in itertools.product(\n",
+    "            enumerate(data_dicts),\n",
+    "            range(model_args.num_images_per_prompt)\n",
+    "        ):\n",
+    "        if (i * model_args.num_images_per_prompt + j) % accelerator.num_processes != accelerator.process_index:\n",
+    "            continue\n",
+    "\n",
+    "        ref_imgs = [\n",
+    "            Image.open(os.path.join(data_root, img_path))\n",
+    "            for img_path in data_dict[\"image_paths\"]\n",
+    "        ]\n",
+    "        if model_args.ref_size==-1:\n",
+    "            model_args.ref_size = 512 if len(ref_imgs)==1 else 320\n",
+    "\n",
+    "        ref_imgs = [preprocess_ref(img, model_args.ref_size) for img in ref_imgs]\n",
+    "\n",
+    "        image_gen = pipeline(\n",
+    "            prompt=data_dict[\"prompt\"],\n",
+    "            width=model_args.width,\n",
+    "            height=model_args.height,\n",
+    "            guidance=model_args.guidance,\n",
+    "            num_steps=model_args.num_steps,\n",
+    "            seed=model_args.seed + j,\n",
+    "            ref_imgs=ref_imgs,\n",
+    "            pe=model_args.pe,\n",
+    "        )\n",
+    "        if model_args.concat_refs:\n",
+    "            image_gen = horizontal_concat([image_gen, *ref_imgs])\n",
+    "\n",
+    "        plt.imshow(image_gen)\n",
+    "        plt.axis('off')\n",
+    "        plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4c11159",
    "metadata": {},
    "outputs": [],
    "source": []
