FineGrain: load model

--- a/FineGrain/finegrainBoxSeg_inference.ipynb
+++ b/FineGrain/finegrainBoxSeg_inference.ipynb
@@ -34,15 +34,55 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "a58d7bea",
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "00516131",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pyml/git_vmirly/GenAI-Hub/tmp/refiners/.venv/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "from PIL import Image\n",
+    "import matplotlib.pyplot as plt\n",
+    "from refiners.solutions import BoxSegmenter\n",
+    "\n",
+    "# Downloads the weights from finegrain/finegrain-box-segmenter\n",
+    "segmenter = BoxSegmenter()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c799e6ba",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python (refiners)",
+   "language": "python",
+   "name": "refiners"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
