Alfie: installation instructions

--- a/Alfie/alfie_inference.ipynb
+++ b/Alfie/alfie_inference.ipynb
@@ -12,19 +12,39 @@
     "**Alfie:Democratising RGBA Image Generation With No $$$**\n",
     "\n",
     " * Paper: https://arxiv.org/pdf/2408.14826v1\n",
-    "\n"
+    "\n",
+    "![Alfie Overview](../assets/alfie_overview.png)\n",
+    "\n",
+    "\n",
+    "### Instalation\n",
+    "\n",
+    "```bash\n",
+    "git clone https://github.com/aimagelab/Alfie.git\n",
+    "cd Alfie\n",
+    "\n",
+    "pip install torch torchvision\n",
+    "pip install -r requirements.txt\n",
+    "```"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "05774567",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2498e789",
    "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "py311",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
