Alfie: function to build prompt

--- a/Alfie/alfie_inference.ipynb
+++ b/Alfie/alfie_inference.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2498e789",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'centering': 'True', 'use_neg_prompt': 'True', 'exclude_generic_nouns': 'True', 'cutout_model': 'grabcut', 'use_suffix': 'False'}\n"
+      "\n"
      ]
     },
     {
@@ -50,7 +50,7 @@
        " 'use_suffix': False}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,16 +68,19 @@
     "from accelerate.logging import get_logger\n",
     "from accelerate.utils import set_seed\n",
     "\n",
+    "from settings import parse_setting\n",
     "from alfie.generate import get_pipe\n",
-    "#from alfie.grabcut import grabcut, save_rgba\n",
-    "#from alfie.trimap import compute_trimap\n",
-    "#from alfie.utils import normalize_masks\n",
+    "#base_arg_parser, parse_bool_args\n",
+    "from alfie.grabcut import grabcut, save_rgba\n",
+    "\n",
+    "from alfie.trimap import compute_trimap\n",
+    "from alfie.utils import normalize_masks\n",
     "\n",
     "torch.backends.cuda.matmul.allow_tf32 = True\n",
     "\n",
     "SETTING_NAME = \"centering-rgba-alfie\"\n",
     "settings_dict = parse_setting(SETTING_NAME)\n",
-    "print(settings_dict)\n",
+    "print()\n",
     "settings_dict = {\n",
     "    k: v == \"True\"\n",
     "    for k, v in settings_dict.items()\n",
@@ -88,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f93b13e1",
    "metadata": {},
    "outputs": [
@@ -103,10 +106,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading shards: 100%|██████████| 2/2 [00:00<00:00, 6141.00it/s]\n",
-      "Loading checkpoint shards: 100%|██████████| 2/2 [00:01<00:00,  1.78it/s]\n",
+      "Downloading shards: 100%|██████████| 2/2 [00:00<00:00, 6195.43it/s]\n",
+      "Loading checkpoint shards: 100%|██████████| 2/2 [00:01<00:00,  1.75it/s]\n",
       "You are using the default legacy behaviour of the <class 'transformers.models.t5.tokenization_t5.T5Tokenizer'>. This is expected, and simply means that the `legacy` (previous) behavior will be used so nothing changes for you. If you want to use the new behaviour, set `legacy=False`. This should only be set if you understand what it means, and thoroughly read the reason why this was added as explained in https://github.com/huggingface/transformers/pull/24565\n",
-      "Loading pipeline components...: 100%|██████████| 5/5 [00:00<00:00, 156.44it/s]\n"
+      "Loading pipeline components...: 100%|██████████| 5/5 [00:00<00:00, 137.03it/s]\n"
      ]
     },
     {
@@ -139,7 +142,7 @@
        "}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,6 +162,60 @@
     ")\n",
     "pipe"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e9b446ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prompt: ['A white background', 'A photo of a cat playing with a kite']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def build_prompt(fg_prompt, centering, use_suffix):\n",
+    "    suffix = ' on a white background'\n",
+    "    prompt_complete = [\"A white background\", fg_prompt]\n",
+    "    prompt_full = ' '.join(prompt_complete[1].split())\n",
+    "    prompt = prompt_complete if centering else prompt_complete[1]\n",
+    "    if use_suffix:\n",
+    "        prompt += suffix\n",
+    "    return prompt\n",
+    "\n",
+    "\n",
+    "NOUNS_TO_EXCLUDE = [\n",
+    "    'image', 'images', 'picture', 'pictures', 'photo', 'photograph', 'photographs', 'illustration',\n",
+    "    'paintings', 'drawing', 'drawings', 'sketch', 'sketches', 'art', 'arts', 'artwork', 'artworks',\n",
+    "    'poster', 'posters', 'cover', 'covers', 'collage', 'collages', 'design', 'designs', 'graphic', 'graphics',\n",
+    "    'logo', 'logos', 'icon', 'icons', 'symbol', 'symbols', 'emblem', 'emblems', 'badge', 'badges', 'stamp',\n",
+    "    'stamps', 'img', 'video', 'videos', 'clip', 'clips', 'film', 'films', 'movie', 'movies', 'meme', 'grand', \n",
+    "    'sticker', 'stickers', 'banner', 'banners', 'billboard', 'billboards', 'label', 'labels', 'scene', 'art',\n",
+    "    'png', 'jpg', 'jpeg', 'gif', 'www', 'com', 'net', 'org', 'http', 'https', 'html', 'css', 'js', 'php', \n",
+    "    'scene', 'view', 'm3'\n",
+    "]\n",
+    "\n",
+    "USE_NEGATIVE_PROMPT = True\n",
+    "NEGATIVE_PROMPT = [\"Blurry, shadow, low-resolution, low-quality\"] if USE_NEGATIVE_PROMPT else None\n",
+    "prompt = build_prompt(\n",
+    "    fg_prompt=\"A photo of a cat playing with a kite\",\n",
+    "    centering=settings_dict['centering'],\n",
+    "    use_suffix=settings_dict['use_suffix']\n",
+    ")\n",
+    "print(f\"Prompt: {prompt}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "158b3ca5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
