--- a/DiffDIS/diffdis_inference.ipynb
+++ b/DiffDIS/diffdis_inference.ipynb
@@ -19,6 +19,24 @@
    "cell_type": "markdown",
    "id": "dc1c1782",
    "metadata": {},
+   "source": [
+    "\n",
+    "! Installation\n",
+    "\n",
+    "```bash\n",
+    "git clone https://github.com/qianyu-dlut/DiffDIS.git\n",
+    "cd DiffDIS\n",
+    "\n",
+    "pip install torch==2.2.0 torchvision==0.17.0 torchaudio==2.2.0 --index-url https://download.pytorch.org/whl/cu118\n",
+    "pip install -r requirements.txt\n",
+    "pip install -e diffusers-0.30.2/\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b3c15db",
+   "metadata": {},
    "source": []
   }
  ],
