DiffDIS: import & setup configs

--- a/DiffDIS/diffdis_inference.ipynb
+++ b/DiffDIS/diffdis_inference.ipynb
@@ -68,8 +68,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "13024b7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "from PIL import Image\n",
+    "from tqdm.auto import tqdm\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from torchvision import transforms\n",
+    "from transformers import CLIPTextModel, CLIPTokenizer\n",
+    "\n",
+    "sys.path.append(\"DiffDIS-repo\")\n",
+    "from core.diffdis_pipeline import DiffDISPipeline\n",
+    "from diffusers import (\n",
+    "    DDPMScheduler,\n",
+    "    UNet2DConditionModel_diffdis,\n",
+    "    AutoencoderKL,\n",
+    ")\n",
+    "\n",
+    "from utils.seed_all import seed_all \n",
+    "from utils.utils import check_mkdir\n",
+    "from utils.config import diste1,diste2,diste3,diste4,disvd\n",
+    "from utils.image_util import resize_res\n",
+    "\n",
+    "to_pil = transforms.ToPILImage()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fddc6322",
    "metadata": {},
    "outputs": [],
    "source": []
