DiffDIS: load model

--- a/DiffDIS/diffdis_inference.ipynb
+++ b/DiffDIS/diffdis_inference.ipynb
@@ -103,8 +103,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "fddc6322",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "use_seperate = False\n",
+    "    \n",
+    "checkpoint_path = \"DiffDIS-repo/checkpoints/\"\n",
+    "pretrained_model_path = \"DiffDIS-repo/models/sd-turbo\"\n",
+    "      \n",
+    "# Diffusion denoising steps, more steps results in higher accuracy but slower inference speed\n",
+    "denoise_steps = 1\n",
+    "# Number of predictions to be ensembled, more inference gives better results but runs slower.\n",
+    "ensemble_size = 1\n",
+    "# Run with half-precision (16-bit float), might lead to suboptimal result.\n",
+    "half_precision = False\n",
+    "# Maximum resolution of processing. 0 for using input image resolution. Default: 1024.\n",
+    "processing_res = 1024\n",
+    "# Match input resolution for output depth. Default: False.\n",
+    "match_input_res = True\n",
+    "# Random seed for reproducibility\n",
+    "seed = None\n",
+    "# Inference batch size. Default: 0 (will be set automatically).\n",
+    "batch_size = 1\n",
+    "\n",
+    "match_output_input_res = False\n",
+    "\n",
+    "    \n",
+    "# -------------------- Preparation --------------------\n",
+    "# Random seed\n",
+    "if seed is None:\n",
+    "    import time\n",
+    "    seed = int(time.time())\n",
+    "seed_all(seed)\n",
+    "\n",
+    "# -------------------- Device --------------------\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "import ttach as tta\n",
+    "transforms = tta.Compose(\n",
+    "[\n",
+    "    tta.HorizontalFlip(),\n",
+    "    tta.Scale(scales=[0.75, 1, 1.25], interpolation='bilinear', align_corners=False),\n",
+    "])\n",
+    "    \n",
+    "dtype = torch.float16 if half_precision else torch.float32"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d536d9be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using Seperated Modules\n"
+     ]
+    }
+   ],
+   "source": [
+    "# -------------------- Model --------------------\n",
+    "    \n",
+    "vae = AutoencoderKL.from_pretrained(\n",
+    "    pretrained_model_path, subfolder='vae'\n",
+    ")\n",
+    "scheduler = DDPMScheduler.from_pretrained(\n",
+    "    pretrained_model_path, subfolder='scheduler'\n",
+    ")\n",
+    "text_encoder = CLIPTextModel.from_pretrained(\n",
+    "    pretrained_model_path, subfolder='text_encoder'\n",
+    ")\n",
+    "tokenizer = CLIPTokenizer.from_pretrained(\n",
+    "    pretrained_model_path, subfolder='tokenizer'\n",
+    ")\n",
+    "unet = UNet2DConditionModel_diffdis.from_pretrained(\n",
+    "    checkpoint_path, subfolder=\"unet\",\n",
+    "    in_channels=8, sample_size=96,\n",
+    "    low_cpu_mem_usage=False,\n",
+    "    ignore_mismatched_sizes=False,\n",
+    "    class_embed_type='projection',\n",
+    "    projection_class_embeddings_input_dim=4,\n",
+    "    mid_extra_cross=True,\n",
+    "    mode = 'DBIA', use_swci = True\n",
+    ")\n",
+    "\n",
+    "pipe = DiffDISPipeline(\n",
+    "    unet=unet,\n",
+    "    vae=vae,\n",
+    "    scheduler=scheduler,\n",
+    "    text_encoder=text_encoder,\n",
+    "    tokenizer=tokenizer\n",
+    ")\n",
+    "print(\"Using Seperated Modules\")\n",
+    "    \n",
+    "\n",
+    "pipe = pipe.to(device);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73dad64b",
    "metadata": {},
    "outputs": [],
    "source": []
