--- a/DiffDIS/diffdis_inference.ipynb
+++ b/DiffDIS/diffdis_inference.ipynb
@@ -68,10 +68,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "13024b7d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pyml/anaconda3/envs/diffdis/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -103,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "fddc6322",
    "metadata": {},
    "outputs": [],
@@ -153,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "d536d9be",
    "metadata": {},
    "outputs": [
@@ -206,8 +215,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "73dad64b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# -------------------- Inference --------------------\n",
+    "def run_inference(input_image_pil):\n",
+    "    w_,h_ = input_image_pil.size\n",
+    "    img_resize = resize_res(input_image_pil, resolution=processing_res)\n",
+    "\n",
+    "    input_image = img_resize.convert(\"RGB\")\n",
+    "    image = np.array(input_image)\n",
+    "    rgb = np.transpose(image,(2,0,1))\n",
+    "    rgb_norm = rgb / 255.0 * 2.0 - 1.0\n",
+    "    rgb_norm = torch.from_numpy(rgb_norm).to(device)\n",
+    "    rgb_norm = rgb_norm.to(device).float().unsqueeze(0)\n",
+    "    mask_m = []\n",
+    "    mask_e = []\n",
+    "    for transformer in transforms:\n",
+    "        img_resize = transformer.augment_image(rgb_norm)\n",
+    "        with torch.no_grad():\n",
+    "            pipe_out_m, pipe_out_e = pipe(\n",
+    "                img_resize,\n",
+    "                denosing_steps=denoise_steps,\n",
+    "                ensemble_size=ensemble_size,\n",
+    "                processing_res=processing_res,\n",
+    "                match_input_res=match_input_res,\n",
+    "                batch_size=batch_size,\n",
+    "                show_progress_bar=True\n",
+    "            )\n",
+    "        deaug_mask_m = transformer.deaugment_mask(pipe_out_m.unsqueeze(0).unsqueeze(0))\n",
+    "        mask_m.append(deaug_mask_m)\n",
+    "        deaug_mask_e = transformer.deaugment_mask(pipe_out_e.unsqueeze(0).unsqueeze(0))\n",
+    "        mask_e.append(deaug_mask_e)\n",
+    "\n",
+    "\n",
+    "    prediction_m = torch.mean(torch.stack(mask_m, dim=0), dim=0)\n",
+    "    prediction_e = torch.mean(torch.stack(mask_e, dim=0), dim=0)\n",
+    "\n",
+    "    prediction_m = to_pil(prediction_m.data.squeeze(0).cpu())\n",
+    "    prediction_m = prediction_m.resize((w_, h_), Image.BILINEAR)\n",
+    "    \n",
+    "    prediction_e = to_pil(prediction_e.data.squeeze(0).cpu())\n",
+    "    prediction_e = prediction_e.resize((w_, h_), Image.BILINEAR)\n",
+    "\n",
+    "    return prediction_m, prediction_e\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e14b8972",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1068, 1137)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                  \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "((1068, 1137), (1068, 1137))"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image_path = \"../samples/plants.jpg\"\n",
+    "input_image_pil = Image.open(image_path)\n",
+    "print(input_image_pil.size)\n",
+    "\n",
+    "pred_m, pred_e = run_inference(input_image_pil)\n",
+    "\n",
+    "pred_m.size, pred_e.size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25643bbe",
    "metadata": {},
    "outputs": [],
    "source": []
