--- a/Leffa/leffa_inference.ipynb
+++ b/Leffa/leffa_inference.ipynb
@@ -11,9 +11,34 @@
     "**Learning Flow Fields in Attention for Controllable Person Image Generation**\n",
     "\n",
     " * Paper: https://arxiv.org/abs/2412.08486\n",
-    "\n",
-    " "
+    "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "270aea84",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "```bash\n",
+    "git clone https://github.com/franciszzj/Leffa.git\n",
+    "cd Leffa/\n",
+    "\n",
+    "\n",
+    "conda create -n leffa python==3.10\n",
+    "conda activate leffa\n",
+    "pip install -r requirements.txt \n",
+    "pip install ipykernel\n",
+    "python -m ipykernel install --user --name leffa --display-name \"leffa\"\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "159e2d72",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
