--- a/Leffa/leffa_inference.ipynb
+++ b/Leffa/leffa_inference.ipynb
@@ -35,9 +35,35 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "159e2d72",
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "897cfb8b",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append(\"Leffa_repo\")\n",
+    "import numpy as np\n",
+    "from PIL import Image\n",
+    "import matplotlib.pyplot as plt\n",
+    "from huggingface_hub import snapshot_download\n",
+    "\n",
+    "from leffa.transform import LeffaTransform\n",
+    "from leffa.model import LeffaModel\n",
+    "from leffa.inference import LeffaInference\n",
+    "from leffa_utils.garment_agnostic_mask_predictor import AutoMasker\n",
+    "from leffa_utils.densepose_predictor import DensePosePredictor\n",
+    "from leffa_utils.utils import resize_and_center, list_dir, get_agnostic_mask_hd, get_agnostic_mask_dc, preprocess_garment_image\n",
+    "from preprocess.humanparsing.run_parsing import Parsing\n",
+    "from preprocess.openpose.run_openpose import OpenPose"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3da6cae",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -48,7 +74,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.0"
   }
  },
