Leffa: download checkpoints with hf-snapshot_download

--- a/Leffa/leffa_inference.ipynb
+++ b/Leffa/leffa_inference.ipynb
@@ -59,6 +59,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f17edde5",
+   "metadata": {},
+   "source": [
+    "## Download checkpoints"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c9dc8e6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fetching 37 files: 100%|██████████| 37/37 [00:00<00:00, 2629.03it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'/home/pyml/git_vmirly/GenAI-Hub/tmp/Leffa/ckpts'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Download checkpoints\n",
+    "snapshot_download(repo_id=\"franciszzj/Leffa\", local_dir=\"./ckpts\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f3da6cae",
