--- a/Leffa/leffa_inference.ipynb
+++ b/Leffa/leffa_inference.ipynb
@@ -11,7 +11,9 @@
     "**Learning Flow Fields in Attention for Controllable Person Image Generation**\n",
     "\n",
     " * Paper: https://arxiv.org/abs/2412.08486\n",
-    "\n"
+    "\n",
+    "\n",
+    "![Leffa Overview](../assets/leffa_overview.png)\n"
    ]
   },
   {
@@ -98,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3da6cae",
+   "id": "3a652e9d",
    "metadata": {},
    "outputs": [],
    "source": []
