Leffa: inference example

--- a/Leffa/leffa_inference.ipynb
+++ b/Leffa/leffa_inference.ipynb
@@ -272,8 +272,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "260ac3b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The config attributes {'decay': 0.9999, 'inv_gamma': 1.0, 'min_decay': 0.0, 'optimization_step': 37000, 'power': 0.6666666666666666, 'update_after_step': 0, 'use_ema_warmup': False} were passed to UNet2DConditionModel, but are not expected and will be ignored. Please verify your config.json configuration file.\n",
+      "The config attributes {'decay': 0.9999, 'inv_gamma': 1.0, 'min_decay': 0.0, 'optimization_step': 37000, 'power': 0.6666666666666666, 'update_after_step': 0, 'use_ema_warmup': False} were passed to UNet2DConditionModel, but are not expected and will be ignored. Please verify your config.json configuration file.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.LeffaPredictor at 0x7f9643974850>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "leffa_predictor = LeffaPredictor()\n",
+    "leffa_predictor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "15fba87a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1/1 [00:00<00:00,  5.36it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00,  6.27it/s]\n",
+      "  0%|          | 0/50 [00:00<?, ?it/s]/home/pyml/anaconda3/envs/leffa/lib/python3.10/site-packages/diffusers/models/resnet.py:323: FutureWarning: `scale` is deprecated and will be removed in version 1.0.0. The `scale` argument is deprecated and will be ignored. Please remove it, as passing it will raise an error in the future. `scale` should directly be passed while calling the underlying pipeline component i.e., via `cross_attention_kwargs`.\n",
+      "  deprecate(\"scale\", \"1.0.0\", deprecation_message)\n",
+      "/home/pyml/anaconda3/envs/leffa/lib/python3.10/site-packages/diffusers/models/activations.py:116: FutureWarning: `scale` is deprecated and will be removed in version 1.0.0. The `scale` argument is deprecated and will be ignored. Please remove it, as passing it will raise an error in the future. `scale` should directly be passed while calling the underlying pipeline component i.e., via `cross_attention_kwargs`.\n",
+      "  deprecate(\"scale\", \"1.0.0\", deprecation_message)\n",
+      "/home/pyml/anaconda3/envs/leffa/lib/python3.10/site-packages/diffusers/models/downsampling.py:135: FutureWarning: `scale` is deprecated and will be removed in version 1.0.0. The `scale` argument is deprecated and will be ignored. Please remove it, as passing it will raise an error in the future. `scale` should directly be passed while calling the underlying pipeline component i.e., via `cross_attention_kwargs`.\n",
+      "  deprecate(\"scale\", \"1.0.0\", deprecation_message)\n",
+      "/home/pyml/anaconda3/envs/leffa/lib/python3.10/site-packages/diffusers/models/upsampling.py:145: FutureWarning: `scale` is deprecated and will be removed in version 1.0.0. The `scale` argument is deprecated and will be ignored. Please remove it, as passing it will raise an error in the future. `scale` should directly be passed while calling the underlying pipeline component i.e., via `cross_attention_kwargs`.\n",
+      "  deprecate(\"scale\", \"1.0.0\", deprecation_message)\n",
+      "100%|██████████| 50/50 [00:19<00:00,  2.52it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(3, (1024, 768, 3), (1024, 768), (1024, 768, 3))"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# virtual try-on example\n",
+    "# input : ../samples/man.jpg\n",
+    "# ref image: ../samples/suit.png\n",
+    "res = leffa_predictor.leffa_predict_vt(\n",
+    "    src_image_path=\"../samples/man.jpg\",\n",
+    "    ref_image_path=\"../samples/suit.png\",\n",
+    "    ref_acceleration=False,\n",
+    "    step=50,\n",
+    "    scale=2.5,\n",
+    "    seed=42,\n",
+    "    vt_model_type=\"viton_hd\",\n",
+    "    vt_garment_type=\"upper_body\",\n",
+    "    vt_repaint=False,\n",
+    "    preprocess_garment=True\n",
+    ")\n",
+    "\n",
+    "len(res), res[0].shape, res[1].shape, res[2].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6edb21fb",
    "metadata": {},
    "outputs": [],
    "source": []
