EssentialAI: overview figure

--- a/EssentialAI/essentialai_huggingface_inference.ipynb
+++ b/EssentialAI/essentialai_huggingface_inference.ipynb
@@ -10,14 +10,10 @@
     "\n",
     "**ESSENTIAL-WEB V1.0: 24T tokens of organized web data**\n",
     "\n",
-    " * Paper: https://arxiv.org/abs/2506.14111\n"
+    " * Paper: https://arxiv.org/abs/2506.14111\n",
+    "\n",
+    "![EssentialAI overview](../assets/essentialai_overview.png)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5ce406a4",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
